bakkie_derive/tests/ui/fail/tool_variable_value.stderr
error: expected string literal
 --> tests/ui/fail/tool_variable_value.rs:5:15
  |
5 | #[tool(name = MY_NAME)]
  |               ^^^^^^^
